Sinead FINAL draft

--- a/sinead-page-1.html
+++ b/sinead-page-1.html
@@ -115,51 +115,51 @@
                         var body = document.getElementById("story-body");
                         if (s==1) {
                             body.style.backgroundImage = "url('images/sinead/bg-1.jpg')";
-                            body.style.backgroundColor = "#172740";
+                            body.style.backgroundColor = "#541211";
                         }
                         else if (s==2) {
                             body.style.backgroundImage = "url('images/sinead/bg-2.jpg')";
-                            body.style.backgroundColor = "#541211";
+                            body.style.backgroundColor = "#172740";
                         }
                         else if (s==3) {
                             body.style.backgroundImage = "url('images/sinead/bg-3.jpg')";
-                            body.style.backgroundColor = "#172740";
+                            body.style.backgroundColor = "#541211";
                         }
                         else if (s==4) {
                             body.style.backgroundImage = "url('images/sinead/bg-4.jpg')";
-                            body.style.backgroundColor = "#541211";
+                            body.style.backgroundColor = "#172740";
                         }
                         else if (s==5) {
                             body.style.backgroundImage = "url('images/sinead/bg-5.jpg')";
-                            body.style.backgroundColor = "#172740";
+                            body.style.backgroundColor = "#541211";
                         }
                         else if (s==6) {
                             body.style.backgroundImage = "url('images/sinead/bg-6.jpg')";
-                            body.style.backgroundColor = "#541211";
+                            body.style.backgroundColor = "#172740";
                         }
                         else if (s==7) {
                             body.style.backgroundImage = "url('images/sinead/bg-7.jpg')";
-                            body.style.backgroundColor = "#172740";
+                            body.style.backgroundColor = "#541211";
                         }
                         else if (s==8) {
                             body.style.backgroundImage = "url('images/sinead/bg-8.jpg')";
-                            body.style.backgroundColor = "#541211";
+                            body.style.backgroundColor = "#172740";
                         }
                         else if (s==9) {
                             body.style.backgroundImage = "url('images/sinead/bg-9.jpg')";
-                            body.style.backgroundColor = "#172740";
+                            body.style.backgroundColor = "#541211";
                         }
                         else if (s==10) {
                             body.style.backgroundImage = "url('images/sinead/bg-10.jpg')";
-                            body.style.backgroundColor = "#541211";
+                            body.style.backgroundColor = "#172740";
                         }
                         else if (s==11) {
                             body.style.backgroundImage = "url('images/sinead/bg-11.jpg')";
-                            body.style.backgroundColor = "#172740";
+                            body.style.backgroundColor = "#541211";
                         }
                         else if (s==12) {
                             body.style.backgroundImage = "url('images/sinead/bg-12.jpg')";
-                            body.style.backgroundColor = "#541211";
+                            body.style.backgroundColor = "#172740";
                         }
                     }
                     else if (semail=="email") {
@@ -190,83 +190,85 @@
                     document.getElementById('bg-modal').style.display = "block";
                     document.getElementById('modal-pic').style.display="none";
                     if (x==1) {
-                        document.getElementById('modal-email-text').innerHTML="<b>From:</b> Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
-                        <b>To:</b> Louisa Jones (louisianajones@cifmail.com)<br>\
-                        <b>Date:</b> Fri, Mar 13, 10:07pm<br>\
-                        <b>Subject:</b> The world is ending??!<br>";
+                        document.getElementById('modal-email-text').innerHTML="<b>From:</b> Louisa Jones (louisianajones@cifmail.com) <br>\
+                        <b>To:</b> Sinéad Murphy (shinnyshinny@cifmail.com) <br>\
+                        <b>Date:</b> Sunday, March 15, 5:36pm<br>\
+                        <b><u>Subject:</u> I miss carnival and cotton candy and my phone</b><br>";
                     }
                     if (x==2) {
-                        document.getElementById('modal-email-text').innerHTML="<b>From:</b> Louisa Jones (louisianajones@cifmail.com)<br>\
-                        <b>To:</b> Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
-                        <b>Date:</b> Sunday, March 15, 5:36pm<br>\
-                        <b>Subject:</b> February, festival, and french toast<br>";
+                        document.getElementById('modal-email-text').innerHTML="<b>From:</b> Sinéad Murphy (shinnyshinny@cifmail.com) <br>\
+                        <b>To:</b> Louisa Jones (louisianajones@cifmail.com)<br>\
+                        <b>Date:</b> Wednesday, Mar 18, 12:07pm<br>\
+                        <b><u>Subject:</u> The world is ending??!</b><br>";
                     }
                     if (x==3) {
-                        document.getElementById('modal-email-text').innerHTML="<b>From:</b> Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
-                        <b>To:</b> Louisa Jones (louisianajones@cifmail.com)<br>\
-                        <b>Date:</b> Wed, Apr 1, 7:32pm<br>\
-                        <b>Subject:</b> Lockdown fun!<br>";
+                        document.getElementById('modal-email-text').innerHTML="<b>From:</b> Louisa Jones (louisianajones@cifmail.com) <br>\
+                        <b>To:</b> Sinéad Murphy (shinnyshinny@cifmail.com) <br>\
+                        <b>Date:</b> Sunday, April 17, 4:36 pm<br>\
+                        <b><u>Subject:</u> I miss school and choosing to be bored</b><br>";
                     }
                     if (x==4) {
-                        document.getElementById('modal-email-text').innerHTML="<b>From:</b> Louisa Jones (louisianajones@cifmail.com)<br>\
-                        <b>To:</b> Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
-                        <b>Date:</b> Sunday, April 17, 4:36 pm<br>\
-                        <b>Subject:</b> Sheltering, sun, and sugar<br>";
+                        document.getElementById('modal-email-text').innerHTML="<b>From:</b> Sinéad Murphy (shinnyshinny@cifmail.com) <br>\
+                        <b>To:</b> Louisa Jones (louisianajones@cifmail.com)<br>\
+                        <b>Date:</b> Sunday, Apr 19, 7:32pm<br>\
+                        <b><u>Subject:</u> Lockdown with the Murphys</b><br>";
                     }
                     if (x==5) {
-                        document.getElementById('modal-email-text').innerHTML="<b>From:</b> Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
-                        <b>To:</b> Louisa Jones (louisianajones@cifmail.com)<br>\
-                        <b>Date:</b> Mon, May 13, 2:26pm<br>\
-                        <b>Subject:</b> Nightmares and birthdays!<br>";
+                        document.getElementById('modal-email-text').innerHTML="<b>From:</b> Louisa Jones (louisianajones@cifmail.com) <br>\
+                        <b>To:</b> Sinéad Murphy (shinnyshinny@cifmail.com) <br>\
+                        <b>Date:</b> Sunday, May 17, 12:23pm<br>\
+                        <b><u>Subject:</u> Friends, final classes, and fever dreams</b><br>";
                     }
                     if (x==6) {
-                        document.getElementById('modal-email-text').innerHTML="<b>From:</b> Louisa Jones (louisianajones@cifmail.com)<br>\
-                        <b>To:</b> Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
-                        <b>Date:</b> Sunday, May 17, 12:23pm<br>\
-                        <b>Subject:</b> Floating, fever dreams, and final classes<br>";
+                        document.getElementById('modal-email-text').innerHTML="<b>From:</b> Sinéad Murphy (shinnyshinny@cifmail.com) <br>\
+                        <b>To:</b> Louisa Jones (louisianajones@cifmail.com)<br>\
+                        <b>Date:</b> Tuesday, May 19, 2:26pm<br>\
+                        <b><u>Subject:</u> A birthday nightmare</b><br>";
                     }
                     if (x==7) {
-                        document.getElementById('modal-email-text').innerHTML="<b>From:</b> Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
-                        <b>To:</b> Louisa Jones (louisianajones@cifmail.com)<br>\
-                        <b>Date:</b> Mon, Jun 8, 19:32pm<br>\
-                        <b>Subject:</b> Protests and shop openings<br>";
+                        document.getElementById('modal-email-text').innerHTML="<b>From:</b> Louisa Jones (louisianajones@cifmail.com) <br>\
+                        <b>To:</b> Sinéad Murphy (shinnyshinny@cifmail.com) <br>\
+                        <b>Date:</b> Monday, June 8, 12:03 pm<br>\
+                        <b><u>Subject:</u> I miss when Jane would talk to me</b><br>";
                     }
                     if (x==8) {
-                        document.getElementById('modal-email-text').innerHTML="<b>From:</b> Louisa Jones (louisianajones@cifmail.com)<br>\
-                        <b>To:</b> Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
-                        <b>Date:</b> Monday, June 8, 12:03 pm<br>\
-                        <b>Subject:</b> Rallying, root beer, and what’s right<br>";
+                        document.getElementById('modal-email-text').innerHTML="<b>From:</b> Sinéad Murphy (shinnyshinny@cifmail.com) <br>\
+                        <b>To:</b> Louisa Jones (louisianajones@cifmail.com)<br>\
+                        <b>Date:</b> Thursday, Jun 11, 1:32pm<br>\
+                        <b><u>Subject:</u> Protests and shop openings</b><br>";
                     }
                     if (x==9) {
-                        document.getElementById('modal-email-text').innerHTML="<b>From:</b> Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
-                        <b>To:</b> Louisa Jones (louisianajones@cifmail.com)<br>\
-                        <b>Date:</b> Monday, July 20, 8:46pm<br>\
-                        <b>Subject:</b> Writing camps and travel rumours<br>";
+                        document.getElementById('modal-email-text').innerHTML="<b>From:</b> Louisa Jones (louisianajones@cifmail.com) <br>\
+                        <b>To:</b> Sinéad Murphy (shinnyshinny@cifmail.com) <br>\
+                        <b>Date:</b> Friday, July 23, 7:54pm<br>\
+                        <b><u>Subject:</u> Home, heat, and hospital calls</b><br>";
                     }
                     if (x==10) {
-                        document.getElementById('modal-email-text').innerHTML="<b>From:</b> Louisa Jones (louisianajones@cifmail.com)<br>\
-                        <b>To:</b> Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
-                        <b>Date:</b> Friday, July 23, 7:54pm<br>\
-                        <b>Subject:</b> Home, heat, and hospital calls<br>";
+                        document.getElementById('modal-email-text').innerHTML="<b>From:</b> Sinéad Murphy (shinnyshinny@cifmail.com) <br>\
+                        <b>To:</b> Louisa Jones (louisianajones@cifmail.com)<br>\
+                        <b>Date:</b> Sunday, July 26, 8:46pm<br>\
+                        <b><u>Subject:</u> Writing camps and prayers</b><br>";
                     }
                     if (x==11) {
-                        document.getElementById('modal-email-text').innerHTML="<b>From:</b> Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
-                        <b>To:</b> Louisa Jones (louisianajones@cifmail.com)<br>\
-                        <b>Date:</b> Fri, Aug 14, 1:46pm<br>\
-                        <b>Subject:</b> Connemara adventures and secondary school soon!<br>";
+                        document.getElementById('modal-email-text').innerHTML="<b>From:</b> Louisa Jones (louisianajones@cifmail.com) <br>\
+                        <b>To:</b> Sinéad Murphy (shinnyshinny@cifmail.com) <br>\
+                        <b>Date:</b> Friday, August 14, 7:54pm<br>\
+                        <b><u>Subject:</u> School, safety, and shared excitement</b><br>";
                     }
                     if (x==12) {
-                        document.getElementById('modal-email-text').innerHTML="<b>From:</b> Louisa Jones (louisianajones@cifmail.com)<br>\
-                        <b>To:</b> Sinéad Murphy (shinnyshinny@cifmail.com)<br>\
-                        <b>Date:</b> Friday, August 14, 7:54pm<br>\
-                        <b>Subject:</b> School, safety, and shared excitement<br>";
+                        document.getElementById('modal-email-text').innerHTML="<b>From:</b> Sinéad Murphy (shinnyshinny@cifmail.com) <br>\
+                        <b>To:</b> Louisa Jones (louisianajones@cifmail.com)<br>\
+                        <b>Date:</b> Sun, Aug 16, 1:46pm<br>\
+                        <b><u>Subject:</u> Connemara adventures and secondary school soon!</b><br>";
                     }
                 }
 
+                /*
                 function reload() {
                     var x = document.getElementById('twine-embed').contentWindow;
                     x.postMessage('reload', '*');
                 } 
+                */
 
                 window.onbeforeunload = function(){
                      return 'Your progress will not be saved!';
