--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                     <b>Writers:</b> Benjamine Mo and Victoria Geh<br>
                     <b>Tech:</b> Victoria Geh<br>
                     <b>Visuals:</b> Benjamine Mo<br><br>
+                    <b><u>Estimated reading time:</u></b> 15 mins <br>
                 <a href="doubledfront.html" class="enterButton">enter</a>
               </p>
             </div>
@@ -61,13 +62,18 @@
     <button class="map-point" style="top:30%;left:45%">
         <div class="content">
             <div class="centered-y">
-                <h2>Sinéad & Louisa</h2>
-                <p>This is story number four. It's awesome. (This should be over Ireland, though the story also occurs in New Orleans) <br><br>
-                    <b>Writers:</b> Jane Loughman and Elisabeth McLaughlin<br>
-                    <b>Tech:</b> Rishi Chhapolia<br>
-                    <b>Visuals:</b> Elisabeth McLaughlin<br>
-                <br><a href="sinead-page-1.html" class="enterButton">enter</a>
-                </p>
+                <div class="sinead">
+                    <br>
+                    <h2>Sinéad & Louisa</h2>
+                    <img src="images/sinead/cover.jpg" alt="Sinead & Louisa Interactive Fiction" style="width:230px;"><br>
+                    <p> Two young girls, one in Ireland and the other in Louisiana, rapidly adjust to the struggles (and joys) of virtual learning and staying at home. <br><br>
+                        <b>Writers:</b> Jane Loughman and Elisabeth McLaughlin<br>
+                        <b>Tech:</b> Rishi Chhapolia<br>
+                        <b>Visuals:</b> Elisabeth McLaughlin<br><br>
+                        <b><u>Estimated reading time:</u></b> 30 mins <br>
+                    <br><a href="sinead-page-1.html" class="enterButton">enter</a><br>
+                    </p>
+                </div>
             </div>
         </div>
     </button>
@@ -91,7 +97,7 @@
         <div class="content">
             <div class="centered-y">
                 <h2>I See You</h2>
-                <img src="images/i-see-you/title-1.gif" alt="A Doubled Front Interactive Fiction" style="width:200px;margin-bottom:10px"><br>
+                <img src="images/i-see-you/title-1.gif" alt="I See You Interactive Fiction" style="width:280px;margin-bottom:10px"><br>
                 <p>Step into the shoes and gloves of an ICU surgeon. You are Dr. Sabrina Kelly as she prepares for her newly adjusted surgical routine during COVID-19. <br><br>
                     <b>Writers:</b> Payton Geller and Arina Karkhanis<br>
                     <b>Tech:</b> Rishi Chhapolia<br>
