--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <b>Writers:</b> Benjamine Mo and Victoria Geh<br>
                     <b>Tech:</b> Victoria Geh<br>
                     <b>Visuals:</b> Benjamine Mo<br><br>
-                    <b><u>Estimated reading time:</u></b> 15 mins <br>
+                    <b><u>Estimated reading time:</u></b> 15 mins <br><br>
                 <a href="doubledfront.html" class="enterButton">enter</a>
               </p>
             </div>
