--- a/index.html
+++ b/index.html
@@ -62,8 +62,6 @@
     <button class="map-point" style="top:30%;left:45%">
         <div class="content">
             <div class="centered-y">
-                <div class="sinead">
-                    <br>
                     <h2>Sinéad & Louisa</h2>
                     <img src="images/sinead/cover.jpg" alt="Sinead & Louisa Interactive Fiction" style="width:230px;"><br>
                     <p> Two young girls, one in Ireland and the other in Louisiana, rapidly adjust to the struggles (and joys) of virtual learning and staying at home. <br><br>
@@ -73,7 +71,6 @@
                         <b><u>Estimated reading time:</u></b> 30 mins <br>
                     <br><a href="sinead-page-1.html" class="enterButton">enter</a><br>
                     </p>
-                </div>
             </div>
         </div>
     </button>
@@ -103,8 +100,7 @@
                     <b>Tech:</b> Rishi Chhapolia<br>
                     <b>Visuals:</b> Celia Lê<br><br>
                     <b><u>Estimated reading time:</u></b> 5-10 mins <br><br>
-                
-                <a href="i-see-you-1.html" class="enterButton">enter</a>
+                <a href="i-see-you-1.html" class="enterButton">enter</a><br>
                 </p> 
             </div>
         </div>
