--- a/sinead-page-1.html
+++ b/sinead-page-1.html
@@ -100,6 +100,7 @@
                         s = num;
                         console.log(s);
                         document.getElementById("myImage").src = "images/sinead/img" + s + ".jpg";
+                        console.log(document.getElementById("myImage").src);
                     }
                     else if (simg=="gif") {
                         on();
