--- a/sinead-story-1.html
+++ b/sinead-story-1.html
@@ -102,7 +102,7 @@ Last Thursday, I went into &lt;span class=&quot;clickers&quot; id=&quot;2&quot;&
 {
 |l1)[(link: &quot;Read more&quot;)[(t8n: &quot;dissolve&quot;)(show: ?p2)(t8n: &quot;dissolve&quot;)(show: ?l2)]]
 
-|p2)[So, when I walked through the playground into school and &lt;span class = &quot;clickers&quot; id = &quot;audiox&quot;&gt;Aoife&lt;/span&gt; came up to me to do our handshake, I sort&#39;ve jumped back. ‘What’s wrong?’ she asked. I told her that we shouldn’t. She rolled her eyes, ‘why, because of coronavirus? You think I have it?’ I shrugged, ‘I was just told to avoid it.’ She huffed and walked in ahead of me. She didn’t say anything else to me all morning, and she sits beside me in class. &lt;br&gt;&lt;br&gt;
+|p2)[So, when I walked through the playground into school and &lt;span class = &quot;clickers&quot; id = &quot;audio6&quot;&gt;Aoife&lt;/span&gt; came up to me to do our handshake, I sort&#39;ve jumped back. ‘What’s wrong?’ she asked. I told her that we shouldn’t. She rolled her eyes, ‘why, because of coronavirus? You think I have it?’ I shrugged, ‘I was just told to avoid it.’ She huffed and walked in ahead of me. She didn’t say anything else to me all morning, and she sits beside me in class. &lt;br&gt;&lt;br&gt;
 
 &lt;span class = &quot;clickers&quot; id = &quot;audio2&quot;&gt;|txf3&gt;[Múinteoir Ní Dorcháin]&lt;/span&gt; was writing a maths sum on the board when &lt;span class = &quot;clickers&quot; id = &quot;audio3&quot;&gt;|txf4&gt;[An Príomhoide]&lt;/span&gt; came by and said 6th class were to come to the hall for an assembly. In the echoey hall, An Príomhoide told us that &lt;span class = &quot;clickers&quot; id = &quot;3&quot;&gt;|txfx&gt;[The Taoiseach]&lt;/span&gt; had announced on the news that schools were going to close for, like, 3 weeks or so.
 
@@ -115,11 +115,11 @@ Last Thursday, I went into &lt;span class=&quot;clickers&quot; id=&quot;2&quot;&
 		  console.log(&quot;gif clicker 3 clicked!&quot;);
 		  window.top.postMessage(&#39;gif3&#39;, &#39;*&#39;);	
 	  });
-	var audiox = document.createElement(&#39;audio&#39;);
-	  audiox.src = &#39;sounds/aoife.m4a&#39;;
-	  document.getElementById(&#39;audiox&#39;).addEventListener(&quot;click&quot;, function() {
+	var audio6 = document.createElement(&#39;audio&#39;);
+	  audio6.src = &#39;sounds/aoife.m4a&#39;;
+	  document.getElementById(&#39;audio6&#39;).addEventListener(&quot;click&quot;, function() {
 	  console.log(&quot;audio played!&quot;);
-	  audiox.play();
+	  audio6.play();
 	  });
   var audio2 = document.createElement(&#39;audio&#39;);
 	  audio2.src = &#39;sounds/muinteoir.m4a&#39;;
