--- a/sinead-story-1.html
+++ b/sinead-story-1.html
@@ -119,7 +119,7 @@ Last Thursday, I went into &lt;span class=&quot;clickers&quot; id=&quot;2&quot;&
 	var audio6 = document.createElement(&#39;audio&#39;);
 	  audio6.src = &#39;sounds/aoife.mp3&#39;;
 	  document.getElementById(&#39;audio6&#39;).addEventListener(&quot;click&quot;, function() {
-	  console.log(&quot;audio played!&quot;);
+	  console.log(&quot;aoife mp3 played!&quot;);
 	  audio6.play();
 	  });
 	  
