sinead sound fix

--- a/sinead-story-1.html
+++ b/sinead-story-1.html
@@ -123,15 +123,6 @@ Last Thursday, I went into &lt;span class=&quot;clickers&quot; id=&quot;2&quot;&
 	  audio6.play();
 	  });
 	  
-	  /*
-	  var playPromise = document.querySelector(&#39;audio6&#39;).play();
-	  if (playPromise !== undefined) {
-  			playPromise.then(function() {
-  			}).catch(function(error) {
-  		});
-		}
-	*/
-	  
   var audio2 = document.createElement(&#39;audio&#39;);
 	  audio2.src = &#39;sounds/muinteoir.m4a&#39;;
 	  document.getElementById(&#39;audio2&#39;).addEventListener(&quot;click&quot;, function() {
@@ -161,15 +152,15 @@ When we packed up our things after assembly to be collected, I saw that the girl
 		  window.top.postMessage(&#39;gif4&#39;, &#39;*&#39;);	
 	  });
 	 var audio4 = document.createElement(&#39;audio&#39;);
-	  audio4.src = &#39;sounds/saoirse.m4a&#39;;
+	  audio4.src = &#39;sounds/saoirse.mp3&#39;;
 	  document.getElementById(&#39;audio4&#39;).addEventListener(&quot;click&quot;, function() {
-	  console.log(&quot;audio played!&quot;);
+	  console.log(&quot;saoirse mp3 played!&quot;);
 	  audio4.play();
 	  });
 	var audio7 = document.createElement(&#39;audio&#39;);
-	  audio7.src = &#39;sounds/caoimhe.m4a&#39;;
+	  audio7.src = &#39;sounds/caoimhe.mp3&#39;;
 	  document.getElementById(&#39;audio7&#39;).addEventListener(&quot;click&quot;, function() {
-	  console.log(&quot;audio played!&quot;);
+	  console.log(&quot;caoimhe mp3 played!&quot;);
 	  audio7.play();
 	  });
 &lt;/script&gt;
@@ -905,9 +896,9 @@ Eventually Oisín wants to go back home and see his family. Niamh warns him to n
 	  audio3.play();
 	  });
 	var audio4 = document.createElement(&#39;audio&#39;);
-	  audio4.src = &#39;sounds/niamh.m4a&#39;;
+	  audio4.src = &#39;sounds/niamh.mp3&#39;;
 	  document.getElementById(&#39;audio4&#39;).addEventListener(&quot;click&quot;, function() {
-	  console.log(&quot;audio played!&quot;);
+	  console.log(&quot;niamh mp3 played!&quot;);
 	  audio4.play();
 	  });
 	var $20 = document.getElementById(&#39;20&#39;).addEventListener(&quot;click&quot;, function() {
