I-See-You FINAL draft

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <b>Tech:</b> Rishi Chhapolia<br>
                     <b>Visuals:</b> Celia Lê<br><br>
                     <b><u>Estimated reading time:</u></b> 5-10 mins <br><br>
-                <a href="i-see-you-1.html" class="enterButton">enter</a><br>
+                <a href="i-see-you-page.html" class="enterButton">enter</a><br>
                 </p> 
             </div>
         </div>
