--- a/sinead-page-1.html
+++ b/sinead-page-1.html
@@ -50,15 +50,12 @@
               </div>
 
             <div class="story-txt">
-                <div class = "iframe-ui">
-                    <img src = "images/sinead/UI-1.svg" alt = "iFrame UI" id="ui-1"> 
-                </div>
                 <iframe
                     mozallowfullscreen="true"
-                    src="sinead-story-1.html"
+                    src="i-see-you-1.html"
                     frameborder="0"
                     width="100%" height="100%"
-                    id="twine-embed">
+                    id="twine-embed-2">
                 </iframe>
             </div>
 
