--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- Current CSS -->
         <link rel="stylesheet" href="style.css"/>
         <!-- Logo link -->
-        <link rel="shortcut icon" href="images/white-logo.svg"/>
+        <link rel="shortcut icon" href="images/white-logo.svg" type="image/x-icon"/>
         <!-- Fonts -->
         <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;700&display=swap" rel="stylesheet"> <!-- Maven Pro font -->
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&display=swap" rel="stylesheet"> <!-- Playfair font-->
@@ -27,7 +27,7 @@
             gtag('config', 'UA-176737183-1');
           </script>
         
-<title>Columbia Int Fic: What IF</title> 
+<title>Columbia Int Fic: what IF - Home</title> 
     </head>
 <body>
            <body id="home-body">
