--- a/sinead-page-1.html
+++ b/sinead-page-1.html
@@ -10,10 +10,10 @@
         <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;700&display=swap" rel="stylesheet"> <!-- Maven Pro font -->
         <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>what IF: Sinead & Louisa</title>
+        <title>what IF: Sinéad & Louisa</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="shortcut icon" href="images/white-logo.svg"/>
+        <link rel="shortcut icon" href="images/white-logo.svg" type="image/x-icon"/>
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-176737183-2"></script>
