--- a/i-see-you-1.html
+++ b/i-see-you-1.html
@@ -169,11 +169,11 @@ Your microwave is out of service and won’t be fixed anytime soon. Weather repo
 		}
 	}
 &lt;/script&gt;
-}</tw-passagedata><tw-passagedata pid="5" name="Symptoms" tags="" position="310.3333333333333,471" size="100,100">&lt;center&gt; &lt;img src=&quot;images/i-see-you/3-25.jpg&quot; height=&quot;700&quot; alt=&quot;red COVID pass&quot;&gt; &lt;/center&gt;
+}</tw-passagedata><tw-passagedata pid="5" name="Symptoms" tags="" position="310,471" size="100,100">&lt;center&gt; &lt;img src=&quot;images/i-see-you/3-25.jpg&quot; height=&quot;700&quot; alt=&quot;red COVID pass&quot;&gt; &lt;/center&gt;
 
 The nurse looks down and reviews your questionnaire on her screen, “I’m sorry, but I can’t let you into the hospital. Please go home and only come back when you are feeling better and symptom free.”
 
-[[Quarantine and rest for 2 weeks-&gt;2weeks]]</tw-passagedata><tw-passagedata pid="6" name="No symptoms" tags="" position="604.3333333333333,683.3333333333334" size="100,100">&lt;center&gt; &lt;img src=&quot;images/i-see-you/3.jpg&quot; height=&quot;600&quot; alt=&quot;wearing gloves&quot;&gt; &lt;/center&gt;
+[[Quarantine and rest for 2 weeks-&gt;2weeks]]</tw-passagedata><tw-passagedata pid="6" name="No symptoms" tags="" position="604,683" size="100,100">&lt;center&gt; &lt;img src=&quot;images/i-see-you/3.jpg&quot; height=&quot;600&quot; alt=&quot;wearing gloves&quot;&gt; &lt;/center&gt;
 
 |p1&gt;[After filling out the questionnaire, you walk over to the nurse’s station to have your temperature checked. A masked woman points a scanner at your forehead.]
 
@@ -181,7 +181,7 @@ The nurse looks down and reviews your questionnaire on her screen, “I’m sorr
 
 (click-replace: ?p2)[It reads (text-color: #4a8540)[98.6ºF]. She motions for you to further enter the hospital.
 
-[[Continue-&gt;Entry]]]</tw-passagedata><tw-passagedata pid="7" name="Gloves" tags="" position="546,970.3333333333333" size="100,100">{
+[[Continue-&gt;Entry]]]</tw-passagedata><tw-passagedata pid="7" name="Gloves" tags="" position="546,970" size="100,100">{
 |p1&gt;[You’re already equipped with your protective equipment. The N95 mask and face shield moistens with a combination of coffee breath and sweat. You’ve been instructed that gloves aren’t mandatory if you wash your hands regularly. But the bunches of blue latex surgical gloves are in your vicinity. You reach out to |txf1&gt;[slap on a pair.]
 
 (click: ?txf1)[(show: ?img1)]]
@@ -239,7 +239,7 @@ His eyes crease into small crescents, and you think he’s smiling, but it’s h
 
 As we say in the medical field, donning your PPE during surgery is like preparing for war. You&#39;re all ready to get to work.
 
-[[Continue-&gt;block2]]]</tw-passagedata><tw-passagedata pid="12" name="block2" tags="" position="612.3333333333334,1438" size="100,100">Mr. Jones lies dormant in the operating room, as the nurses position his legs and prep him in a sterile manner. Femur fractures were always one of your favorite procedures. You don’t even need to recount the steps; somehow your hands remember the method:
+[[Continue-&gt;block2]]]</tw-passagedata><tw-passagedata pid="12" name="block2" tags="" position="612,1438" size="100,100">Mr. Jones lies dormant in the operating room, as the nurses position his legs and prep him in a sterile manner. Femur fractures were always one of your favorite procedures. You don’t even need to recount the steps; somehow your hands remember the method:
 
 	1.  |p0&gt;[Make incision at hip.]
 
@@ -376,11 +376,11 @@ As we say in the medical field, donning your PPE during surgery is like preparin
 (click: ?p6)[(show: ?p7)]
 (click: ?p7)[(show: ?p8)]
 (click: ?p8)[(show: ?p9)]
-(click: ?p9)[(show: ?p10)]</tw-passagedata><tw-passagedata pid="16" name="intubation3" tags="" position="751,1596.6666666666665" size="100,100">|p00&gt;[Dr. Carter hovers over Mr. Jones’ body. He is unable to be extubated. The atmosphere in the room is grim, and you bite your lip from under your face masks. None of you are entirely sure how COVID-19 works. Sometimes you believe a patient is doing okay, but they suddenly take a turn for the worse. All you know is that the disease has affected Mr. Jones’ lungs and breathing. He is in a temporary coma and you don’t know when or if he will awake.
+(click: ?p9)[(show: ?p10)]</tw-passagedata><tw-passagedata pid="16" name="intubation3" tags="" position="751,1596" size="100,100">|p00&gt;[Dr. Carter hovers over Mr. Jones’ body. He is unable to be extubated. The atmosphere in the room is grim, and you bite your lip from under your face masks. None of you are entirely sure how COVID-19 works. Sometimes you believe a patient is doing okay, but they suddenly take a turn for the worse. All you know is that the disease has affected Mr. Jones’ lungs and breathing. He is in a temporary coma and you don’t know when or if he will awake.
 
 |p0&gt;[Continue]]
 
-(click-replace: ?p0)[Mr. Jones is carted to the ICU and hooked up to a ventilator. Now for the worst part. You hate having to this, but it’s part of your job; your fingers slowly hover over the buttons before you dial the number of Mr. Jones’ family. Detached, you explain that there were complications and he won’t be coming home. All his wife can do is sob into the phone––Methodist still doesn’t accept visitors.
+(click-replace: ?p0)[Mr. Jones is carted to the ICU and hooked up to a ventilator. Now for the worst part. You hate having to this, but it’s part of your job; your fingers slowly hover over the buttons before you dial the number of Mr. Jones’ family. Detached, you explain that there were complications and he won’t be coming home. All his wife can do is sob into the phone—Methodist still doesn’t accept visitors.
 
 |p01&gt;[Continue]]
 
@@ -404,7 +404,7 @@ As we say in the medical field, donning your PPE during surgery is like preparin
 
 &lt;center&gt; &lt;img src=&quot;images/i-see-you/9.jpg&quot; height=&quot;400&quot; alt=&quot;that damn microwave&quot;&gt; &lt;/center&gt;
 
-[[Continue-&gt;End]]]</tw-passagedata><tw-passagedata pid="17" name="Entry" tags="" position="687,853" size="100,100">|p1&gt;[You walk through the hospital and make your way over to the pre-operative area where your patient is waiting for surgery. Only one case today, a femur fracture, and then you can get home and see if you can call someone for the microwave. The patient is in a separate room with the door closed––he has tested positive for COVID-19. You grab a pair of goggles so that your eyes can be covered. 
+[[Continue-&gt;End]]]</tw-passagedata><tw-passagedata pid="17" name="Entry" tags="" position="687,853" size="100,100">|p1&gt;[You walk through the hospital and make your way over to the pre-operative area where your patient is waiting for surgery. Only one case today, a femur fracture, and then you can get home and see if you can call someone for the microwave. The patient is in a separate room with the door closed—he has tested positive for COVID-19. You grab a pair of goggles so that your eyes can be covered. 
 
 You pause for a second at the glove box…
 
@@ -477,7 +477,7 @@ You pause for a second at the glove box…
 		}
 	}
 &lt;/script&gt;
-}</tw-passagedata><tw-passagedata pid="20" name="No symptoms2" tags="" position="767.6666666666666,678.3333333333334" size="100,100">&lt;center&gt; &lt;img src=&quot;images/i-see-you/3.jpg&quot; height=&quot;600&quot; alt=&quot;wearing gloves&quot;&gt; &lt;/center&gt;
+}</tw-passagedata><tw-passagedata pid="20" name="No symptoms2" tags="" position="767,678" size="100,100">&lt;center&gt; &lt;img src=&quot;images/i-see-you/3.jpg&quot; height=&quot;600&quot; alt=&quot;wearing gloves&quot;&gt; &lt;/center&gt;
 
 |p1&gt;[After filling out the questionnaire, you walk over to the nurse’s station to have your temperature checked. A masked woman points a scanner at your forehead.]
 
