--- a/team.html
+++ b/team.html
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;700&display=swap" rel="stylesheet"> <!-- Maven Pro font -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&display=swap" rel="stylesheet"> <!-- Playfair font-->
         
-    <title>Columbia Int Fic: what IF</title>
+    <title>Columbia Int Fic: what IF - Meet the Team</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-176737183-2"></script>
