--- a/sinead-page-1.html
+++ b/sinead-page-1.html
@@ -52,10 +52,10 @@
             <div class="story-txt">
                 <iframe
                     mozallowfullscreen="true"
-                    src="i-see-you-1.html"
+                    src="sinead-story-1.html"
                     frameborder="0"
                     width="100%" height="100%"
-                    id="twine-embed-2">
+                    id="twine-embed">
                 </iframe>
             </div>
 
