--- a/credits.html
+++ b/credits.html
@@ -45,7 +45,6 @@
                     </h3>
                     <p> visits </p>
                 </div>
-                <!-- prompt space to credits-->
             </section>
             <a class="space-bar" id="firstPage" href="credits-2.html">continue</a>
                         
@@ -56,9 +55,9 @@
                 });
             </script>    
         </main> 
+        <!-- # of people visiting not configured 
         <footer>
-            <img src="./images/white crown logo.png" alt="int-fic icon">
-            <!-- # of people visiting not configured --> 
-        </footer> 
+            <a class="space-bar" id="firstPage" href="credits-2.html"><img src="./images/white crown logo.png" alt="int-fic icon"></a>
+        </footer> --> 
     </body>
 </html>
