Credits title update

--- a/credits-2.html
+++ b/credits-2.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;700&display=swap" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet"> 
 
-    <title>Columbia Int Fic</title>
+    <title>Columbia Int Fic: what IF - Credits</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-176737183-2"></script>
