--- a/credits.html
+++ b/credits.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Columbia Int Fic: What IF</title>
+        <title>Columbia Int Fic: What IF - Credits</title>
         <meta name="description" content="Travely: Real-time intineraries powered by location AI.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" href="images/favicon_io/favicon.ico"/> 
