--- a/sinead-story-1.html
+++ b/sinead-story-1.html
@@ -60,7 +60,10 @@ window.onmessage = function(e) {
 	if (e.data.toString()=="reload") {
 		hacks.goto('Start');
 	}
-}</script><tw-tag name="Louisa-Email" color="purple"></tw-tag>,<tw-tag name="Sinead-Email" color="red"></tw-tag>,<tw-tag name="dreams" color="red"></tw-tag><tw-passagedata pid="1" name="Email2" tags="Sinead-Email" position="975,462" size="100,100">{
+}
+
+
+</script><tw-tag name="Louisa-Email" color="purple"></tw-tag>,<tw-tag name="Sinead-Email" color="red"></tw-tag>,<tw-tag name="dreams" color="red"></tw-tag><tw-passagedata pid="1" name="Email2" tags="Sinead-Email" position="975,462" size="100,100">{
   &lt;script&gt;
 	window.top.postMessage(&#39;email2&#39;, &#39;*&#39;);
 	console.log(&quot;email clicker 2 executed!&quot;); 
@@ -289,8 +292,6 @@ I woke up thinking that’s nothing compared to all that glitter we had in our h
 
 &lt;span class = &quot;clickers&quot; id = &quot;audio2&quot;&gt;Sending warmth&lt;/span&gt; (you know we have too much of that anyway)! &lt;br /&gt;
 &lt;span class = &quot;clickers&quot; id = &quot;x&quot;&gt;[[— Louisa-&gt;Email2]]&lt;/span&gt;&lt;br&gt;&lt;br&gt;
-
-&lt;b&gt;P.S. Looks like I’m not getting a new phone anytime soon. Mom says this’ll teach me responsibility. Uh huh.&lt;/b&gt;
 
 
 &lt;script&gt;
