--- a/doubledfrontstory.html
+++ b/doubledfrontstory.html
@@ -428,7 +428,7 @@ Now, I need to devote myself to my patients. They deserve the best I can provide
 	
 	[[I’m ready, and I’m scared.-&gt;10. Nighttime]]
 	
-	<span style="font-size:16px;line-height:16px">//For a more in-depth and accurate understanding of the experiences of frontline workers in hospitals during the COVID-19 pandemic, please refer to these (link-repeat: &quot;first-hand testimonials.&quot;)[(open-url: &quot;doubledvideos.html&quot;)] We respect the authorial integrity presented by these accounts and humbly defer to them, urging you to read through and then return to our narrative when ready.//]</span>
+	<span style="font-size:16px;line-height:16px">//For a more in-depth and accurate understanding of the experiences of frontline workers in hospitals during the COVID-19 pandemic, please refer to these (link-repeat: &quot;first-hand testimonials.&quot;)[(open-url: &quot;doubledvideos.html&quot;)] We respect the authorial integrity presented by these accounts and urge you to watch through them after completing our narrative.//]</span>
 </tw-passagedata>
 
 <!-- 10. Nighttime-->
@@ -594,7 +594,7 @@ Almost midnight now, [[but the sky still glows.-&gt;Fin.]]
 	
 	To read about incidents of anti-Asian hate and other Asian diasporic identity-related news: (link-repeat: &quot;NextShark&quot;)[(open-url: &quot;https://nextshark.com/&quot;)] and (link-repeat: &quot;AsAm News&quot;)[(open-url: &quot;https://asamnews.com/&quot;)]
 	
-	Support Chinatown: (link-repeat: &quot;Welcome to Chinatown&quot;)[(open-url: &quot;https://www.welcometochinatown.com/&quot;)] and (link-repeat: &quot;Heart of Dinner&quot;)[(open-url: &quot;campsite.bio/heartofdinner&quot;)]
+	Support Chinatown: (link-repeat: &quot;Welcome to Chinatown&quot;)[(open-url: &quot;https://www.welcometochinatown.com/&quot;)] and (link-repeat: &quot;Heart of Dinner&quot;)[(open-url: &quot;https://campsite.bio/heartofdinner&quot;)]
 	
 	Local groups that have taken action in response to the surge in anti-Asian hate:
 	(link-repeat: &quot;Concerned AsAm Citizens of NYC&quot;)[(open-url: &quot;https://www.facebook.com/CAACNYC/&quot;)]
