--- a/i-see-you-1.html
+++ b/i-see-you-1.html
@@ -380,7 +380,7 @@ As we say in the medical field, donning your PPE during surgery is like preparin
 
 |p0&gt;[Continue]]
 
-(click-replace: ?p0)[Mr. Jones is carted to the ICU and hooked up to a ventilator. Now for the worst part. You hate having to this, but it’s part of your job; your fingers slowly hover over the buttons before you dial the number of Mr. Jones’ family. Detached, you explain that there were complications and he won’t be coming home. All his wife can do is sob into the phone—Methodist still doesn’t accept visitors.
+(click-replace: ?p0)[Mr. Jones is carted to the ICU and hooked up to a ventilator. Now for the worst part. You hate having to do this, but it’s part of your job; your fingers slowly hover over the buttons before you dial the number of Mr. Jones’ family. Detached, you explain that there were complications and he won’t be coming home. All his wife can do is sob into the phone—Methodist still doesn’t accept visitors.
 
 |p01&gt;[Continue]]
 
