sally/lauren story pushes
-final story push

--- a/index.html
+++ b/index.html
@@ -74,22 +74,22 @@
             </div>
         </div>
     </button>
-<!--
+
     <button class="map-point" style="top:43%;left:81%">
         <div class="content">
             <div class="centered-y">
-                <h2>Digital Sex Crimes in South Korea</h2>
+                <h2>From Bystander to Activist</h2>
                 <p>As South Korea confronts a crisis of sexual abuse, from widespread spycam crimes to the Nth room, citizens face a world of unjust realities. This piece tells the story of one such person and asks, “What does it mean to be a bystander?”<br><br>
                     <b>Writers:</b> Sally Jee and Lauren Alcindor<br>
                     <b>Tech:</b> Lauren Alcindor<br>
                     <b>Visuals:</b> Katherine Bibilouri<br><br>
                     <b><u>Estimated reading time:</u></b> 30 mins <br><br>
-                <a href="SLStoryDraft4.html" class="enterButton">enter</a>
+                <a href="SLstoryfinal.html" class="enterButton">enter</a>
                 </p>
             </div>
         </div>
     </button>
--->
+
     <button class="map-point" style="top:42%;left:25%">
         <div class="content">
             <div class="centered-y">
