update to credits
updated story name in credits

--- a/credits-2.html
+++ b/credits-2.html
@@ -27,7 +27,7 @@
 
         gtag('config', 'UA-176737183-1');
     </script>
-    </script>
+ 
   </head>
   <body>
     <div class="container-fluid">
@@ -38,7 +38,7 @@
                 <div class="creds-rolling">
                     <h4>Writing</h4>
                     <p><b>A Doubled Front</b>: Benjamine Mo, Victoria Geh</p>
-                    <p><b>Digital Sex Crimes Korea</b>: Sally Jee, Lauren Alcindor</p>
+                    <p><b>From Bystander to Activist</b>: Sally Jee, Lauren Alcindor</p>
                     <p><b>I See You</b>: Payton Geller, Arina Karkhanis</p>
                     <p><b>Sinéad & Louisa</b>: Jane Loughman, Elisabeth McLaughlin</p>
                     <br />
