--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         <div class="content">
             <div class="centered-y">
                 <h2>From Bystander to Activist</h2>
+                <img src="SLimages/storycover.JPG" alt="Sinead & Louisa Interactive Fiction" style="width:230px;"><br>
                 <p>As South Korea confronts a crisis of sexual abuse, from widespread spycam crimes to the Nth room, citizens face a world of unjust realities. This piece tells the story of one such person and asks, “What does it mean to be a bystander?”<br><br>
                     <b>Writers:</b> Sally Jee and Lauren Alcindor<br>
                     <b>Tech:</b> Lauren Alcindor<br>
