stories to map linked

--- a/SLstoryfinal.html
+++ b/SLstoryfinal.html
@@ -1222,7 +1222,7 @@ Sign the petition in support of Byun Hee-soo&#39;s reinstatement &lt;a href=&quo
 
 
 ==|
-(t8n: &quot;dissolve&quot;)[&lt;mark&gt;(link-repeat: &quot;Credits&quot;)[(open-url: &quot;credits.html&quot;)]&lt;/mark&gt;]</tw-passagedata><tw-passagedata pid="38" name="G*" tags="" position="72,2142" size="100,100">&lt;h3&gt; From Bystander to Activist: Responses to Digital Sex Crimes in South Korea&lt;/h3&gt;
+(t8n: &quot;dissolve&quot;)[&lt;mark&gt;(link-repeat: &quot;Credits&quot;)[(open-url: &quot;map.html&quot;)]&lt;/mark&gt;]</tw-passagedata><tw-passagedata pid="38" name="G*" tags="" position="72,2142" size="100,100">&lt;h3&gt; From Bystander to Activist: Responses to Digital Sex Crimes in South Korea&lt;/h3&gt;
 |==
 &lt;header&gt;(set: $slowTransition to (t8n: &quot;dissolve&quot; )+(transition-time: 2s))&lt;mark&gt;(link-repeat: &quot;The “1366” Women’s Call Center&quot;)[(open-url: &quot;https://www.women1366.kr/_sub01/sub01_03.html&quot;)]&lt;/mark&gt;
 
