--- a/map.html
+++ b/map.html
@@ -23,9 +23,9 @@
         </script>
     </head>
     <body>
-      <iframe width="100%" height="900" frameborder="0"
-      src="https://observablehq.com/embed/@vg2425/columbia-int-fic-global-visitors?cell=chart&cell=visitors"></iframe>
-      <main> 
+    <iframe width="100%" height="900" frameborder="0"
+    src="https://observablehq.com/embed/@vg2425/columbia-int-fic-global-visitors?cell=visitors&cell=chart"></iframe>
+    <main> 
         <a class="space-bar" id="firstPage" href="credits-2.html">continue</a>
                     
         <script type="text/javascript">
