--- a/team.html
+++ b/team.html
@@ -102,8 +102,8 @@
           <div class="col-md-2 col-sm-5 text-left member">
             <img src="teamPhotos/celia2.jpg" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
             <h4>Celia Le <br> CC '22</h4>
-            <p>Celia Lê is a junior and an illustrator at Columbia University studying East Asian Studies and Linguistics. <a data-toggle="collapse" href="#member8" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
-            <div class="collapse" id="member8">
+            <p>Celia Lê is a junior and an illustrator at Columbia University studying East Asian Studies and Linguistics. <a data-toggle="collapse" href="#member6" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
+            <div class="collapse" id="member6">
               <p>An immigrant from Saigon, Vietnam by way of Mississippi, she’s passionate about Indigenous Southeast Asian languages preservation, art, and human rights. Besides being a visual team member at Columbia Int Fic, this summer she served as a translator for The Southeast Asian Diaspora Project (SEAD) in Minneapolis and more. </p>
             </div>
             <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
@@ -113,8 +113,8 @@
           <div class="col-md-2 col-sm-5 text-left member">
             <img src="teamPhotos/sally.jpg" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
             <h4>Erin Liang <br> SEAS ‘23</h4>
-            <p>Sally Jee, originally from South Korea, is a senior studying Neuroscience & Behavior. <a data-toggle="collapse" href="#member6" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
-            <div class="collapse" id="member6">
+            <p>Sally Jee, originally from South Korea, is a senior studying Neuroscience & Behavior. <a data-toggle="collapse" href="#member7" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
+            <div class="collapse" id="member7">
               <p>She is a peer advocate for Sexual Violence Response, an organization that supports Columbia University-affiliated survivors of sexual and gender-based violence. She is also the Vice-President of Columbia Queer Alliance. In her free time, she likes to read, bake pastries, and watch cat videos on YouTube.</p>
             </div>
             <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
@@ -124,8 +124,8 @@
           <div class="col-md-2 col-sm-5 text-left member">
             <img src="teamPhotos/jane.jpg" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
             <h4>Jane Loughman <br> GS ‘22</h4>
-            <p>Jane is a junior in the Dual BA Program between Columbia University and Trinity College Dublin, majoring in English. <a data-toggle="collapse" href="#member9" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
-            <div class="collapse" id="member9">
+            <p>Jane is a junior in the Dual BA Program between Columbia University and Trinity College Dublin, majoring in English. <a data-toggle="collapse" href="#member8" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
+            <div class="collapse" id="member8">
               <p>She is from Bray, a town about 30 minutes from Dublin in Ireland. She wrote the story <i>Sinéad and Louisa</i> along with Elisabeth McLaughlin. She is the GCC liaison, and on the writing and social media team. She has written for Trinity News and <a href="www.youtube.com/queenofquirk">vlogs</a> and <a href="www.queenofquirk.com">blogs</a> in her spare time. </p>
             </div>
             <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
@@ -137,8 +137,8 @@
           <div class="col-md-2 col-sm-5 text-left member">
             <img src="teamPhotos/elizabeth.jpg" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
             <h4>Elisabeth McLaughlin <br> CC ‘22</h4>
-            <p>Elisabeth is a junior at Columbia University studying Comparative Literature and Society and Visual Arts. <a data-toggle="collapse" href="#member10" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
-            <div class="collapse" id="member10">
+            <p>Elisabeth is a junior at Columbia University studying Comparative Literature and Society and Visual Arts. <a data-toggle="collapse" href="#member9" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
+            <div class="collapse" id="member9">
               <p>Growing up outside New Orleans and having spent a year in Switzerland as an exchange student, she strongly believes the arts, innovative education, and titles-in-translation are vehicles for transformation and social activism. An experienced writer and photographer, she is particularly drawn to documenting stories relating to community health and environmental justice.</p>
             </div>
             <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
@@ -148,8 +148,8 @@
           <div class="col-md-2 col-sm-5 text-left member">
             <img src="teamPhotos/ben.jpg" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
             <h4>Benjamine Mo <br> CC ’23</h4>
-            <p>Benjamine Mo is a sophomore at Columbia University pursuing studies in Ethnicity & Race (Asian American Studies). <a data-toggle="collapse" href="#member11" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
-            <div class="collapse" id="member11">
+            <p>Benjamine Mo is a sophomore at Columbia University pursuing studies in Ethnicity & Race (Asian American Studies). <a data-toggle="collapse" href="#member10" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
+            <div class="collapse" id="member10">
               <p>His interests include creative writing, public health, political advocacy, and social entrepreneurship. He lives in Queens, NYC and has worked closely with Victoria Geh to create <i>A Doubled Front,</i> an exploration of identity which he is grateful to have been able to share with you, and one which he himself is engaged in.</p>
             </div>
             <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
@@ -170,12 +170,9 @@
           <div class="col-md-2 col-sm-5 text-justify member">
             <img src="teamPhotos/giordana.jpg" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
             <h4>Carly Roth <br> CC ‘21</h4>
-            <p>Giordana Serretta Fiorentino is a rising Sophomore at Columbia College majoring in Anthropology and Creative Writing. <a data-toggle="collapse" href="#member12" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
-            <div class="collapse" id="member12">
-              <p>She is honored to be a writer and editor for this project and share the impact of COVID from the perspective of women in her native country, Italy. She is excited to experiment with interactive fiction and collaborate with the GCC's talented peers. </p>
-            </div>
+            <p>A senior studying computer science, math, and English. </p>
             <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
-            <a href="#"><img src="images/memberlinkedin.svg" style="width:30px" class="icon2"></a>
+            <a href="https://www.linkedin.com/in/carly-roth-6225b4188/"><img src="images/memberlinkedin.svg" style="width:30px" class="icon2"></a>
           </div>
         </div>
         <div class="row justify-content-center">
@@ -183,8 +180,8 @@
           <div class="col-md-2 col-sm-5 text-justify member">
             <img src="teamPhotos/giordana.jpg" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
             <h4>Giordana Serretta Fiorentino <br> CC ‘24</h4>
-            <p>Giordana Serretta Fiorentino is a rising Sophomore at Columbia College majoring in Anthropology and Creative Writing. <a data-toggle="collapse" href="#member12" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
-            <div class="collapse" id="member12">
+            <p>Giordana Serretta Fiorentino is a rising Sophomore at Columbia College majoring in Anthropology and Creative Writing. <a data-toggle="collapse" href="#member13" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
+            <div class="collapse" id="member13">
               <p>She is honored to be a writer and editor for this project and share the impact of COVID from the perspective of women in her native country, Italy. She is excited to experiment with interactive fiction and collaborate with the GCC's talented peers. </p>
             </div>
             <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
@@ -192,21 +189,21 @@
           </div>
           <!-- Christina Su-->
           <div class="col-md-2 col-sm-5 text-left member">
-            <img src="teamPhotos/ben.jpg" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
-            <h4>Christina Su <br> CC ’23</h4>
-            <p>Benjamine Mo is a sophomore at Columbia University pursuing studies in Ethnicity & Race (Asian American Studies). <a data-toggle="collapse" href="#member11" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
-            <div class="collapse" id="member11">
-              <p>His interests include creative writing, public health, political advocacy, and social entrepreneurship. He lives in Queens, NYC and has worked closely with Victoria Geh to create <i>A Doubled Front,</i> an exploration of identity which he is grateful to have been able to share with you, and one which he himself is engaged in.</p>
+            <img src="teamPhotos/christina.png" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
+            <h4>Christina Su <br> CC ’24</h4>
+            <p>Christina is currently a freshman in Columbia College thinking of studying CS + Visual Arts, but also contemplates major switches every other week. <a data-toggle="collapse" href="#member14" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
+            <div class="collapse" id="member14">
+              <p>Born and raised in Vancouver, Canada, she is passionate about visual storytelling and urban studies. She is also a product designer at Spectator and dabbles in content creation for the Columbia Political Review and the Asian Creative Collective, all while surviving on a concerning amount of iced americanos. </p>
             </div>
             <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
-            <a href="https://www.linkedin.com/in/benjaminemo/"><img src="images/memberlinkedin.svg" style="width:30px" class="icon2"></a>
+            <a href="https://www.linkedin.com/in/christinasuym/"><img src="images/memberlinkedin.svg" style="width:30px" class="icon2"></a>
           </div>
           <!-- Ana Valeria -->
           <div class="col-md-2 col-sm-5 text-justify member">
             <img src="teamPhotos/ana2.jpg" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
             <h4>Ana Valeria Vázquez Navas <br> GS ‘23</h4>
-            <p>Ana Valeria is a rising sophomore in the Dual BA between Sciences Po and Columbia University. <a data-toggle="collapse" href="#member13" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
-            <div class="collapse" id="member13">
+            <p>Ana Valeria is a rising sophomore in the Dual BA between Sciences Po and Columbia University. <a data-toggle="collapse" href="#member15" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
+            <div class="collapse" id="member15">
               <p>She is from Caguas, a small town, in Puerto Rico. Currently, she studies Politics and Government, but she is very interested in focusing on creative writing and film at Columbia. She is so honored to be working alongside very talented and creative teammates to deliver great stories!</p>
             </div>
             <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
@@ -216,12 +213,12 @@
           <div class="col-md-2 col-sm-5 text-justify member">
             <img src="teamPhotos/tina.jpg" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
             <h4>Tina Wang <br> CC ‘23</h4>
-            <p>Giordana Serretta Fiorentino is a rising Sophomore at Columbia College majoring in Anthropology and Creative Writing. <a data-toggle="collapse" href="#member12" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
-            <div class="collapse" id="member12">
+            <p>Giordana Serretta Fiorentino is a rising Sophomore at Columbia College majoring in Anthropology and Creative Writing. <a data-toggle="collapse" href="#member16" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
+            <div class="collapse" id="member16">
               <p>She is honored to be a writer and editor for this project and share the impact of COVID from the perspective of women in her native country, Italy. She is excited to experiment with interactive fiction and collaborate with the GCC's talented peers. </p>
             </div>
             <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
-            <a href="#"><img src="images/memberlinkedin.svg" style="width:30px" class="icon2"></a>
+            <a href="http://linkedin.com/in/tina-wang-233090195"><img src="images/memberlinkedin.svg" style="width:30px" class="icon2"></a>
           </div>
         </div>
         <div class="row justify-content-center">
@@ -229,8 +226,8 @@
           <div class="col-md-2 col-sm-5 text-justify member">
             <img src="teamPhotos/vilanna.jpg" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
             <h4>Vilanna Wang<br> CC ‘24</h4>
-            <p>Giordana Serretta Fiorentino is a rising Sophomore at Columbia College majoring in Anthropology and Creative Writing. <a data-toggle="collapse" href="#member12" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
-            <div class="collapse" id="member12">
+            <p>Giordana Serretta Fiorentino is a rising Sophomore at Columbia College majoring in Anthropology and Creative Writing. <a data-toggle="collapse" href="#member17" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
+            <div class="collapse" id="member17">
               <p>She is honored to be a writer and editor for this project and share the impact of COVID from the perspective of women in her native country, Italy. She is excited to experiment with interactive fiction and collaborate with the GCC's talented peers. </p>
             </div>
             <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
@@ -240,8 +237,8 @@
           <div class="col-md-2 col-sm-5 text-left member">
             <img src="teamPhotos/ben.jpg" class="img-fluid mx-auto d-block memberIMG" alt="Responsive image">
             <h4>Yingjie Wang <br> CC ’23</h4>
-            <p>Benjamine Mo is a sophomore at Columbia University pursuing studies in Ethnicity & Race (Asian American Studies). <a data-toggle="collapse" href="#member11" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
-            <div class="collapse" id="member11">
+            <p>Benjamine Mo is a sophomore at Columbia University pursuing studies in Ethnicity & Race (Asian American Studies). <a data-toggle="collapse" href="#member18" role="button" aria-expanded="false" aria-controls="collapseExample">More</a></p>
+            <div class="collapse" id="member18">
               <p>His interests include creative writing, public health, political advocacy, and social entrepreneurship. He lives in Queens, NYC and has worked closely with Victoria Geh to create <i>A Doubled Front,</i> an exploration of identity which he is grateful to have been able to share with you, and one which he himself is engaged in.</p>
             </div>
             <a href="#"><img src="images/membermail.svg" style="width:30px" class="icon1"></a>
